--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>GIT -- BASIC0000000000</h1>
-    <h2>DESARROLLO 2</h2>
+    <h2>OTRO CAMBIO</h2>
+    <h3>OTRO CAMBIO H3</h3>
+    <h4>OTRO CAMBIO H4</h4>
+    <h5>OTRO CAMBIO H5</h5>
 </body>
 </html>
