--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h3>OTRO CAMBIO H3</h3>
     <h4>OTRO CAMBIO H4</h4>
     <h5>OTRO CAMBIO H5</h5>
+    <h6>OTRO CAMBIO H6</h6>
 </body>
 </html>
